# regnant

./: .commitlintrc.json  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .renovaterc.json  .tflint.hcl  .yamllint.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cosign.pub  docker-compose.yml  ruff.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  lint.yml  release.yml  sbom.yml  sign.yml  test.yml  trivy.yml
ami/: README.md  envoy.pkr.hcl
ami/docker/: Dockerfile
ami/salt/: top.sls
ami/salt/containers/: init.sls
ami/salt/containers/files/: apparmor_container_default  containerd_config.toml  seccomp-default.json
ami/salt/envoy/: README.md  init.sls
ami/salt/envoy/files/: bootstrap.yaml.tmpl  envoy-entrypoint.sh  envoy.service
ami/salt/hardening/: init.sls
ami/salt/hardening/files/: apparmor_envoy  audit_99-regnant.rules  fail2ban_regnant.conf  pwquality_99-regnant.conf  sshd_99-regnant.conf  sysctl_lockdown.conf
ami/salt/network/: init.sls
ami/salt/observability/: init.sls
docs/: ARCHITECTURE.md  LONG-TERM-MAINTENANCE.md  MENTORING-AND-OWNERSHIP.md  OBSERVABILITY.md  SCALE.md  SECURITY-POSTURE.md  SUPPLY-CHAIN.md
docs/adr/: 0001-dual-cli-opentofu-and-terraform.md  0002-localstack-community-with-nginx-cloudfront-surrogate.md  0003-configurable-scale-default-three.md  0004-full-opentelemetry-observability-stack.md  0005-upstream-sovereign-over-reimplementation.md  0006-packer-null-builder-plus-docker-layers.md  0007-auth-sidecar-and-steward-ratelimit.md  0008-domain-driven-terraform-module-structure.md  0009-full-osb-spec-compliance.md  0010-product-flavored-backends.md  0011-real-sovereign-yaml-from-worker.md  0012-keycloak-for-oidc.md  0013-wasm-filters-in-rust.md  0014-developer-cli-in-rust.md  0015-supply-chain-cosign-sbom-trivy.md  0016-mtls-everywhere-via-sds.md  0017-distroless-non-root-container-baseline.md
docs/runbooks/: backup-and-restore.md  bind-and-unbind.md  bootstrap.md  incident-response.md  inspect-xds.md  provision-load-balancer.md  rotate-keys.md  teardown.md  view-traces.md
edge/: nginx.conf
edge/conf.d/: default.conf
envoy/: bootstrap.yaml.tmpl
envoy/filters/: README.md
envoy/filters/ab-router/: Cargo.toml
envoy/filters/ab-router/src/: lib.rs
envoy/filters/header-rewriter/: Cargo.toml
envoy/filters/header-rewriter/src/: lib.rs
envoy/filters/request-id-injector/: Cargo.toml
envoy/filters/request-id-injector/src/: lib.rs
identity/keycloak/: realm-export.json
observability/: otel-collector.yaml  prometheus.yml
observability/grafana/dashboards/: .gitkeep
observability/loki/: loki-config.yaml
observability/prometheus_rules/: slo-burn.yml
observability/promtail/: promtail-config.yaml
observability/tempo/: tempo-config.yaml
scripts/: apply.sh  backup.sh  bootstrap.sh  build-ami.sh  coverage.sh  destroy.sh  generate-sbom.sh  load-test.sh  restore.sh  scan-images.sh  seed-data.sh  sign-images.sh  verify.sh
security/ca/: .gitkeep
services/auth-sidecar/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
services/auth-sidecar/proto/: README.md
services/auth-sidecar/src/: main.rs
services/backend-bitbucket-clone/: Dockerfile  pyproject.toml
services/backend-bitbucket-clone/app/: main.py
services/backend-bitbucket-clone/tests/: test_endpoints.py
services/backend-confluence-clone/: pyproject.toml
services/backend-confluence-clone/app/: main.py
services/backend-confluence-clone/tests/: test_endpoints.py
services/backend-jira-clone/: pyproject.toml
services/backend-jira-clone/app/: main.py
services/backend-jira-clone/tests/: test_endpoints.py
services/cli/: Cargo.toml  Dockerfile  README.md
services/cli/src/: auth.rs  broker.rs  commands.rs  main.rs  output.rs
services/osb/: Dockerfile  README.md  mutmut_config.py  openapi.yaml  pyproject.toml
services/osb/osb/: __init__.py  catalog.py  config.py  exceptions.py  observability.py  schemas.py  sovereign_yaml.py  storage.py
services/osb/osb/api/: __init__.py  auth.py  dependencies.py  main.py  routes.py
services/osb/osb/worker/: __init__.py  main.py
services/osb/tests/: conftest.py  test_api_catalog.py  test_api_provision.py  test_sovereign_yaml.py
services/ratelimit/: Dockerfile
services/ratelimit/config/: regnant.yaml
services/sdk/python/: README.md  pyproject.toml
services/sdk/python/regnant_sdk/: __init__.py  client.py  models.py
services/sdk/rust/: README.md
services/sovereign/: Dockerfile  config.yaml
services/sovereign/plugins/: s3_context.py  secrets_context.py
services/sovereign/templates/: clusters.yaml.j2  extension_configs.yaml.j2  listeners.yaml.j2  routes.yaml.j2  secrets.yaml.j2
terraform/envs/local/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/edge/: README.md  cloudfront.tf  main.tf  outputs.tf  route53.tf  variables.tf
terraform/modules/envoy-fleet/: README.md  asg.tf  launch-template.tf  main.tf  nlb.tf  outputs.tf  user-data.sh.tmpl  variables.tf
terraform/modules/identity/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/modules/network/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/observability/: README.md  iam.tf  logs.tf  main.tf  outputs.tf  s3.tf  variables.tf
terraform/modules/osb/: README.md  dynamodb.tf  iam.tf  main.tf  outputs.tf  s3.tf  sqs.tf  variables.tf
terraform/modules/security/: .terraform.lock.hcl  README.md  acm.tf  ca.tf  iam.tf  keypair.tf  kms.tf  main.tf  outputs.tf  security-groups.tf  variables.tf  versions.tf
terraform/modules/sovereign/: README.md  iam.tf  main.tf  outputs.tf  ssm.tf  variables.tf
tests/chaos/: test_envoy_self_heal.py
tests/e2e/: conftest.py  pyproject.toml  test_bind_unbind.py  test_mtls.py  test_oidc_flow.py  test_provision_flow.py  test_wasm_filters.py
tests/load/: k6_smoke.js  k6_sustained.js
tests/terratest/: clients.go  go.mod  go.sum  network_test.go  osb_test.go
(+17 files in other folders)
