[package]
name = "regnant-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
description = "Developer CLI for the regnant Open Service Broker"
repository = "https://github.com/gufranco/regnant"

[[bin]]
name = "regnant"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
tabled = "0.16"
keyring = "4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
