[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "regnant-osb"
version = "0.1.0"
description = "Open Service Broker for the regnant platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "regnant" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "boto3>=1.35.0",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-botocore>=0.49b0",
    "tenacity>=9.0.0",
    "PyYAML>=6.0.2",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "faker>=33.1.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-PyYAML>=6.0.12",
    "boto3-stubs[s3,dynamodb,sqs]>=1.35.0",
    "moto[server]>=5.0.0",
]

[project.scripts]
osb-api = "osb.api.main:run"
osb-worker = "osb.worker.main:run"

[tool.hatch.build.targets.wheel]
packages = ["osb"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ASYNC", "S", "BLE", "FBT",
    "A", "COM", "DTZ", "T20", "PT", "RET", "SIM", "TID", "ARG", "PL", "RUF",
]
ignore = [
    "S101",
    "PLR0913",
    "COM812",
    "TID252",
    "FBT001",
    "FBT002",
    "ARG001",
    "S104",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "ARG"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
disallow_any_unimported = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["osb"]
omit = ["osb/__main__.py"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
