[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "regnant-e2e"
version = "0.1.0"
description = "End-to-end test suite for the regnant platform"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "boto3>=1.35.0",
    "faker>=33.1.0",
    "tenacity>=9.0.0",
    "PyYAML>=6.0.2",
    "redis>=5.2.0",
    "pyjwt[crypto]>=2.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config -q"
markers = [
    "e2e: full end-to-end against a running compose stack",
    "chaos: kills containers during the test",
    "load: generates traffic via k6 (slow)",
]
