[package]
name = "regnant-ab-router"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
description = "Envoy WASM HTTP filter that A/B-routes by a hashed request header"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
