[package]
name = "regnant-header-rewriter"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
description = "Envoy WASM HTTP filter that rewrites response headers"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
