[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "regnant-sdk"
version = "0.1.0"
description = "Python SDK for the regnant Open Service Broker"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "regnant" }]
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["regnant_sdk"]
